# beaver

./: .env.release.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-website.yml  release-macos.yml  test-llamacpp-intel.yml
apps/website/: index.html  package.json  tsconfig.json  vite.config.ts
apps/website/src/: App.tsx  constants.ts  index.css
apps/website/src/components/: Hero.tsx  (+17 more)
docs/: ROADMAP.md
docs/website-explorations/: 01-reflex.html  02-ledger.html  03-lodge.html  04-airgap.html  05-receipts.html  06-hybrid.html  MESSAGING.md  README.md
scripts/: dmgbuild-settings.py  gen-app-icon.py  gen-dmg-background.py  merge-release-manifest.mjs  release-macos.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: mlx_server.py  requirements.txt  test_mlx_server.py
src-tauri/resources/llama/: libggml-base.0.dylib  libggml-blas.0.dylib  libggml-cpu.0.dylib  libggml-rpc.0.dylib  libllama.0.dylib
src-tauri/src/: capture.rs  commands.rs  db.rs  lib.rs  llamacpp.rs  main.rs  mlx.rs  ollama.rs  permission.rs  prompts.rs  server.rs  settings.rs  shortcut.rs  update.rs  windows.rs
src-tauri/src/engine/: llamacpp.rs  mlx.rs  mod.rs
src/components/: BeaverAnimation.tsx  CaptureEntry.tsx  CaptureHud.tsx  CaptureOverlay.tsx  CursorToast.tsx  HistoryList.tsx  Kbd.tsx  Logo.tsx  ModelDownload.test.tsx  ModelDownload.tsx  Onboarding.tsx  PermissionStep.tsx  SettingsPanel.tsx  StatusBanner.tsx  TrayPopover.tsx  UpdatePill.tsx
src/hooks/: useBeaver.ts  useCaptures.ts  useOsprey.ts
src/lib/: accelerator.ts  api.ts  hudPosition.ts  retention.ts  routing.ts
src/tests/: App.test.tsx  BeaverAnimation.test.tsx  CaptureEntry.test.tsx  CaptureHud.test.tsx  CaptureOverlay.test.tsx  CursorToast.test.tsx  HistoryList.test.tsx  Logo.test.tsx  ModelDownload.test.tsx  Onboarding.test.tsx  PermissionStep.test.tsx  SettingsPanel.test.tsx  StatusBanner.test.tsx  TrayPopover.test.tsx  UpdatePill.test.tsx  accelerator.test.ts  api.test.ts  brand-icons.test.ts  dmg-background.test.ts  hudPosition.test.ts  merge-release-manifest.test.ts  release-script.test.ts  retention.test.ts  routing.test.ts  setup.ts  tauri-config.test.ts  useBeaver.test.ts  useCaptures.test.ts  useOsprey.test.ts
(+36 files in other folders)
