[package]
name = "beaver"
version = "0.2.0"
description = "Beaver — macOS menu bar data capture utility"
authors = ["Thomas Indrias"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
screenshots = "0.8.10"
image = "0.25.10"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22.1"
window-vibrancy = "0.7.1"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
log = "0.4"
fs4 = "0.13"

